@@ -20,6 +20,8 @@ production.
   elements to work with DNSBLs that require keys, such as
   Project Honeypot.
 * (bug 30022) Add support for custom loadScript sources to ResourceLoader.
+* (bug 19052) Unicode space separator characters (Zs) now terminates external
+  links and images links.
 
 === Bug fixes in 1.19 ===
 * $wgUploadNavigationUrl should be used for file redlinks if
